--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Niramit:wght@300&display=swap');
+
 html, body {
+    font-family: 'Niramit', sans-serif;
     height: 100%;
     margin: 0;
     padding: 0;
     color: black;
+    scroll-behavior: smooth;
   }
 
 header {
