--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Niramit', sans-serif;
+    letter-spacing: 0.5px;
     height: 100%;
     margin: 0;
     padding: 0;
@@ -91,6 +92,8 @@ footer a, footer p {
 }
 
 #play-btn {
+    font-family: 'Niramit', sans-serif;
+    letter-spacing: 0.5px;
     background-color: #5AB56E;
     border-radius: 4px;
     border: none;
