--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,12 @@ aside {
     line-height: 1.6;
 }
 
+section {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 footer {
     height: 50px;
     width: 100%;
@@ -89,6 +95,10 @@ footer {
 footer a, footer p {
     color: white;
     text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
 
 #play-btn {
