--- a/css/main.css
+++ b/css/main.css
@@ -92,13 +92,17 @@ footer {
     text-align: center;
 }
 
-footer a, footer p {
+footer a, footer p, footer h6 {
     color: white;
     text-decoration: none;
 }
 
 footer a:hover {
     text-decoration: underline;
+}
+
+#thanks {
+    text-transform: uppercase;
 }
 
 #play-btn {
