--- a/css/main.css
+++ b/css/main.css
@@ -1,141 +1,148 @@
 @import url('https://fonts.googleapis.com/css2?family=Niramit:wght@300&display=swap');
 
 html, body {
-    font-family: 'Niramit', sans-serif;
-    letter-spacing: 0.5px;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    color: black;
-    scroll-behavior: smooth;
-  }
+  font-family: 'Niramit', sans-serif;
+  letter-spacing: 0.5px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  color: black;
+  scroll-behavior: smooth;
+  text-align: center;
+}
+IMG.displayed {
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
 
 header {
-    background-color: #5AB56E;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    flex-flow: row wrap;
+  background-color: #5AB56E;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header * {
-    display: inline;
+  display: inline;
 }
 
 header li {
-    margin: 20px;
-    text-transform: uppercase;
+  margin: 20px;
+  text-transform: uppercase;
 }
 
 header li a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 h1, h2, h3 {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 .flex-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .flex-container > * {
-    flex: 1 100%;
+  flex: 1 100%;
 }
 
 #hero {
-    margin-top: 80px;
-    display: inline-block;
+  margin-top: 80px;
+  display: inline-block;
 }
 
 aside {
-    width: 50%;
+  width: 50%;
 }
 
 .hero-description,
 .content-description {
-    padding: 20px;
-    line-height: 1.6;
+  padding: 20px;
+  line-height: 1.6;
+  text-align: center;
 }
 
 #about {
-
+  text-align: center;
 }
 
 #videos {
-    padding: 20px;
-    line-height: 1.6;
+  padding: 20px;
+  line-height: 1.6;
 }
 
 #team {
-    padding: 20px;
-    line-height: 1.6;
+  padding: 20px;
+  line-height: 1.6;
 }
 
 section {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 footer {
-    height: 50px;
-    width: 100%;
-    padding: 50px;
-    margin: 0px;
-    background-color: #5AB56E;
-    text-align: center;
+  height: 50px;
+  width: 100%;
+  padding: 50px;
+  margin: 0px;
+  background-color: #5AB56E;
+  text-align: center;
 }
 
 footer a, footer p, footer h6 {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 footer a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 #thanks {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 #play-btn {
-    font-family: 'Niramit', sans-serif;
-    letter-spacing: 0.5px;
-    background-color: #5AB56E;
-    border-radius: 4px;
-    border: none;
-    color: white;
-    padding: 5px;
-    width: 100px;
-    height: 50px;
+  font-family: 'Niramit', sans-serif;
+  letter-spacing: 0.5px;
+  background-color: #5AB56E;
+  border-radius: 4px;
+  border: none;
+  color: white;
+  padding: 5px;
+  width: 100px;
+  height: 50px;
 }
 
 #play-btn:hover {
-    background-color: #48a15b;
+  background-color: #48a15b;
 }
 
 @media all and (max-width: 800px) {
-    header {
-        justify-content: space-around;
-    }
+header {
+  justify-content: space-around;
+}
 
-    .flex-container {
-      flex-direction: column;
-    }
+.flex-container {
+  flex-direction: column;
+}
 
-    .hero-media { order: 1;  }
-    .hero-description { order: 2; }
-    .content-media { order: 3; }
-    .content-description { order: 4; }
-    .videos { order: 5; }
-    .team { order: 6; }
-    .footer { order: 7; }
+.hero-media { order: 1;  }
+.hero-description { order: 2; }
+.content-media { order: 3; }
+.content-description { order: 4; }
+.videos { order: 5; }
+.team { order: 6; }
+.footer { order: 7; }
 }
