added the video slider thing
works with html and javascript.
just add the future videos as embeded because its running on iframe.
if its going to be used as a video file hosted on site. would need to change to match that.

--- a/css/main.css
+++ b/css/main.css
@@ -146,3 +146,15 @@ header {
 .team { order: 6; }
 .footer { order: 7; }
 }
+
+#videoNav{
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+#videoNav li{
+  list-style: none;
+  cursor: pointer;
+  margin: 5rem;
+
+}
