--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,9 @@ html, body {
   scroll-behavior: smooth;
   text-align: center;
 }
-IMG.displayed {
-  display: block;
-  margin-left: auto;
-  margin-right: auto
+
+hr {
+  width: 50%;
 }
 
 header {
