--- a/css/main.css
+++ b/css/main.css
@@ -55,22 +55,37 @@ h1, h2, h3 {
 }
 
 #hero {
-  margin-top: 80px;
-  display: inline-block;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/hero-img.gif");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 #about {
   text-align: center;
+  margin: 75px 50px 75px;
 }
 
 #videos {
   padding: 20px;
   line-height: 1.6;
+  margin: 25px 50px 75px;
 }
 
 #team {
   padding: 20px;
   line-height: 1.6;
+  margin: 25px 50px 75px;
 }
 
 #team ul {
