--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ h1, h2, h3 {
 }
 
 #hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/hero-img.gif");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/hero-img.gif");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
